--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build:ui": "rm -rf build && cd ../phone-book && npm run build && cp -r build ../Part3-backend",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"    
   },
   "dependencies": {
     "cors": "^2.8.5",
