--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../phone-book && npm run build && cp -r build ../Part3-backend",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"    
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
